# crc64-cxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/: README.md
.github/workflows/: cmake.yml
benches/: main.cpp
include/: crc64.h  crc64.hpp  crc64_config.h.in
include/crc64/: arch.hpp  table.hpp
include/crc64/arch/: aarch64.hpp  x86.hpp
src/: ffi.cpp  simd.cpp  vpclmulqdq.cpp  vpclmulqdq_avx2.cpp  vpclmulqdq_avx512.cpp
tests/: arch.cpp  digest.cpp  ffi.cpp  main.cpp
